<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geochat.ui.fragments.Register">

    <TextView
        android:id="@+id/register_usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/username_descriptor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_emailTV"
        app:layout_constraintStart_toStartOf="@+id/register_emailTV" />

    <EditText
        android:id="@+id/register_usernameTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/register_emailTB"
        app:layout_constraintTop_toTopOf="@+id/register_usernameTV" />

    <TextView
        android:id="@+id/register_emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/email_descriptor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_passwordTV"
        app:layout_constraintStart_toStartOf="@+id/register_passwordTV" />

    <EditText
        android:id="@+id/register_emailTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/register_passwordTB"
        app:layout_constraintTop_toTopOf="@+id/register_emailTV" />

    <TextView
        android:id="@+id/register_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/password_descriptor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_registerB"
        app:layout_constraintStart_toStartOf="@+id/register_registerB" />

    <EditText
        android:id="@+id/register_passwordTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/register_registerB"
        app:layout_constraintTop_toTopOf="@+id/register_passwordTV" />

    <Button
        android:id="@+id/register_registerB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>