<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geochat.ui.fragments.Login">

    <TextView
        android:id="@+id/login_userTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/email_descriptor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_passwordTV"
        app:layout_constraintStart_toStartOf="@+id/login_passwordTV" />

    <EditText
        android:id="@+id/login_userTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_passwordTB"
        app:layout_constraintTop_toTopOf="@+id/login_userTV" />

    <TextView
        android:id="@+id/login_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginBottom="50dp"
        android:text="@string/password_descriptor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_loginB"
        app:layout_constraintStart_toStartOf="@+id/login_loginB" />

    <EditText
        android:id="@+id/login_passwordTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_loginB"
        app:layout_constraintTop_toTopOf="@+id/login_passwordTV" />

    <Button
        android:id="@+id/login_loginB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginB" />

    <TextView
        android:id="@+id/login_registerLinkTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_register"
        android:textAllCaps="false"
        android:textColor="@color/link_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_registerTV" />

</androidx.constraintlayout.widget.ConstraintLayout>